// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate snapshot for the add products page should generate snapshot for the product page when there are 0 products 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/orchestration/api/v1/storageNotes/back?n=/undefined/you-have-added-a-product"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            You have added 0 product to this consignment
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/storageNotes/saveAndValidate"
        method="POST"
      >
        <h2
          class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
        >
          Product stored
        </h2>
        <br />
        <br />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <h2
              class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            >
              Do you need to add another product?
            </h2>
            <div
              class="e1vcssft0 css-1phgi8s-StyledFieldset-StyledHoc e4u1u2g0"
              id="addAnotherProduct"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              />
              <fieldset>
                <legend
                  class="visually-hidden"
                >
                  Do you need to add another product?
                </legend>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherProductYes"
                  id="label-addAnotherProductYes"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherProductYes"
                    name="addAnotherProduct"
                    type="radio"
                    value="Yes"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    Yes
                  </span>
                </label>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherProductNo"
                  id="label-addAnotherProductNo"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherProductNo"
                    name="addAnotherProduct"
                    type="radio"
                    value="No"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    No
                  </span>
                </label>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/storageNotes/saveAndValidate?saveAsDraftUrl=undefined&c=undefined"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <input
            name="journey"
            type="hidden"
            value="storageDocument"
          />
          <input
            name="currentUri"
            type="hidden"
            value=""
          />
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/create-storage-document/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Generate snapshot for the add products page should generate snapshot for the product page when there are multiple products 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/orchestration/api/v1/storageNotes/back?n=/undefined/you-have-added-a-product"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            You have added 2 products to this consignment
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/storageNotes/saveAndValidate"
        method="POST"
      >
        <h2
          class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
        >
          Product stored
        </h2>
        <dl
          class="css-39qxwj"
        >
          <div
            class="css-16k4qo5"
          >
            <dt
              class="css-a1pm7p"
            >
              Narrownecked oceanic eel (ADD)
            </dt>
            <span
              class="css-3ay1af"
            >
              <a
                class="css-80kuzi-StyledHoc e109g54z0"
                href="/create-storage-document/undefined/add-product-to-this-consignment/0"
                id="edit-product-0"
              >
                Edit
                <span
                  class="govuk-visually-hidden"
                >
                  product Narrownecked oceanic eel (ADD)
                </span>
              </a>
            </span>
            <span
              class="css-3ay1af"
            >
              <button
                class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
                formaction="/orchestration/api/v1/storageNotes/removeKey?n=/create-storage-document/undefined/you-have-added-a-product&key=product.0"
                id="remove-product-0"
                style="margin-left: 0.5em;"
              >
                Remove
                <span
                  class="govuk-visually-hidden"
                >
                  product Narrownecked oceanic eel (ADD)
                </span>
              </button>
            </span>
          </div>
        </dl>
        <dl
          class="css-39qxwj"
        >
          <div
            class="css-16k4qo5"
          >
            <dt
              class="css-a1pm7p"
            >
              Narrosecond oceanic eel (ADD)
            </dt>
            <span
              class="css-3ay1af"
            >
              <a
                class="css-80kuzi-StyledHoc e109g54z0"
                href="/create-storage-document/undefined/add-product-to-this-consignment/1"
                id="edit-product-1"
              >
                Edit
                <span
                  class="govuk-visually-hidden"
                >
                  product Narrosecond oceanic eel (ADD)
                </span>
              </a>
            </span>
            <span
              class="css-3ay1af"
            >
              <button
                class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
                formaction="/orchestration/api/v1/storageNotes/removeKey?n=/create-storage-document/undefined/you-have-added-a-product&key=product.1"
                id="remove-product-1"
                style="margin-left: 0.5em;"
              >
                Remove
                <span
                  class="govuk-visually-hidden"
                >
                  product Narrosecond oceanic eel (ADD)
                </span>
              </button>
            </span>
          </div>
        </dl>
        <br />
        <br />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <h2
              class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            >
              Do you need to add another product?
            </h2>
            <div
              class="e1vcssft0 css-1phgi8s-StyledFieldset-StyledHoc e4u1u2g0"
              id="addAnotherProduct"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              />
              <fieldset>
                <legend
                  class="visually-hidden"
                >
                  Do you need to add another product?
                </legend>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherProductYes"
                  id="label-addAnotherProductYes"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherProductYes"
                    name="addAnotherProduct"
                    type="radio"
                    value="Yes"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    Yes
                  </span>
                </label>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherProductNo"
                  id="label-addAnotherProductNo"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherProductNo"
                    name="addAnotherProduct"
                    type="radio"
                    value="No"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    No
                  </span>
                </label>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/storageNotes/saveAndValidate?saveAsDraftUrl=undefined&c=undefined"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <input
            name="journey"
            type="hidden"
            value="storageDocument"
          />
          <input
            name="currentUri"
            type="hidden"
            value=""
          />
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/create-storage-document/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Generate snapshot for the add products page should generate snapshot for the product page when there is at least 1 product 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/orchestration/api/v1/storageNotes/back?n=/undefined/you-have-added-a-product"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            You have added 1 product to this consignment
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/storageNotes/saveAndValidate"
        method="POST"
      >
        <h2
          class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
        >
          Product stored
        </h2>
        <dl
          class="css-39qxwj"
        >
          <div
            class="css-16k4qo5"
          >
            <dt
              class="css-a1pm7p"
            >
              Narrownecked oceanic eel (ADD)
            </dt>
            <span
              class="css-3ay1af"
            >
              <a
                class="css-80kuzi-StyledHoc e109g54z0"
                href="/create-storage-document/undefined/add-product-to-this-consignment/0"
                id="edit-product-0"
              >
                Edit
                <span
                  class="govuk-visually-hidden"
                >
                  product Narrownecked oceanic eel (ADD)
                </span>
              </a>
            </span>
            <span
              class="css-3ay1af"
            />
          </div>
        </dl>
        <br />
        <br />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <h2
              class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            >
              Do you need to add another product?
            </h2>
            <div
              class="e1vcssft0 css-1phgi8s-StyledFieldset-StyledHoc e4u1u2g0"
              id="addAnotherProduct"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              />
              <fieldset>
                <legend
                  class="visually-hidden"
                >
                  Do you need to add another product?
                </legend>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherProductYes"
                  id="label-addAnotherProductYes"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherProductYes"
                    name="addAnotherProduct"
                    type="radio"
                    value="Yes"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    Yes
                  </span>
                </label>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherProductNo"
                  id="label-addAnotherProductNo"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherProductNo"
                    name="addAnotherProduct"
                    type="radio"
                    value="No"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    No
                  </span>
                </label>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/storageNotes/saveAndValidate?saveAsDraftUrl=undefined&c=undefined"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <input
            name="journey"
            type="hidden"
            value="storageDocument"
          />
          <input
            name="currentUri"
            type="hidden"
            value=""
          />
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/create-storage-document/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
